added dialogs for user input

--- a/src/resources/Control_Styles.css
+++ b/src/resources/Control_Styles.css
@@ -1,10 +1,29 @@
 .button {
-    -fx-pref-width: 185px;
-    -fx-pref-height: 30px;
-    -fx-border-width: 2px;
+    -fx-font-size: 8pt;
+    -fx-pref-width: 100px;
     -fx-border-color: #000000;
     -fx-border-radius: 5px;
     -fx-text-fill: #000000;
     -fx-background-color: #a6a6a6;
     -fx-background-radius: 5px;
+}
+#dataPanel {
+    -fx-border-color: #a6a6a6;
+    -fx-background: #a6a6a6;
+    -fx-spacing: 8px;
+    -fx-padding: 5px;
+}
+
+#okButton {
+    -fx-font-size: 8pt;
+    -fx-pref-width: 100px;
+    -fx-border-color: #000000;
+    -fx-border-radius: 5px;
+    -fx-border-width: 2px;
+    -fx-text-fill: #000000;
+    -fx-background-color: lightgreen;
+    -fx-background-radius: 8px;
+}
+.label {
+    -fx-pref-width: 80;
 }
