Revert "Merge branch 'revert-c628ae6f' into 'master'"
This reverts merge request !35

--- a/src/resources/VisualSceneStyles.css
+++ b/src/resources/VisualSceneStyles.css
@@ -8,6 +8,10 @@
 #gameDisplay{
     -fx-alignment: center;
 }
+#gameDisplayBox {
+    -fx-alignment: center;
+    -fx-padding: 2;
+}
 
 #slider{
     -fx-font-size: 9pt;
@@ -64,7 +68,7 @@
 
 #buttonPanel {
     -fx-alignment: center;
-    -fx-padding: 10px;
+    -fx-padding: 8px;
 }
 
 #hBox {
