added drop down options based on correct language chosen

--- a/src/styleresources/VisualSceneStyles.css
+++ b/src/styleresources/VisualSceneStyles.css
@@ -76,5 +76,10 @@
     -fx-padding: 10;
 }
 
+#initialUserDialogs {
+    -fx-pref-width: 600;
+    -fx-pref-height: 600;
+    -fx-background-color: blue;
+}
 
 
