--- a/src/StyleResources/UNC.css
+++ b/src/StyleResources/UNC.css
@@ -5,6 +5,15 @@
     -fx-padding: 5px;
 }
 
+#otherButton {
+    -fx-alignment: center;
+    -fx-pref-width: 150;
+}
+
+#otherBox {
+    -fx-alignment: center;
+}
+
 #gameDisplay{
     -fx-alignment: center;
 }
@@ -58,7 +67,7 @@
 #bottomPanel {
     -fx-spacing: 70px;
     -fx-alignment: center;
-    -fx-padding: 10;
+    -fx-padding: 20;
     -fx-background-color: #8D9092;
     -fx-background-radius: 3;
 }
